--- a/app/src/main/res/layout/my_rows.xml
+++ b/app/src/main/res/layout/my_rows.xml
@@ -50,11 +50,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:weightSum="2"
+        android:weightSum="3"
+        app:useMaterialThemeColors="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -67,7 +69,7 @@
             android:layout_weight="1"
             android:text="buy"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="17sp"
             android:layout_marginEnd="70dp"
             android:layout_marginStart="20dp"
             />
@@ -80,9 +82,27 @@
             android:layout_weight="1"
             android:text="tweet"
             android:textColor="@color/black"
-            android:textSize="18sp"
-            android:layout_marginEnd="50dp"
+            android:textSize="17sp"
+            android:layout_marginEnd="30dp"
+            />
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="135dp"
+            android:layout_weight="1"
+            android:button="@drawable/heart"
             />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+
+
+
+
