--- a/app/src/main/res/layout/my_rows.xml
+++ b/app/src/main/res/layout/my_rows.xml
@@ -56,7 +56,6 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:weightSum="3"
-        app:useMaterialThemeColors="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -70,8 +69,8 @@
             android:text="buy"
             android:textColor="@color/black"
             android:textSize="17sp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginStart="15dp"
             />
 
         <Button
@@ -83,7 +82,7 @@
             android:text="tweet"
             android:textColor="@color/black"
             android:textSize="17sp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="15dp"
             />
 
         <CheckBox
@@ -92,10 +91,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="135dp"
             android:layout_weight="1"
-            android:button="@drawable/heart"
+            android:button="@drawable/selector_wishlist"
+            app:useMaterialThemeColors="false"
             />
-
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
